--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@
                   </div>
                </div>
             </div>
-            <div class="col-lg-3">
-               <div class="mainHeaderTopRight text-right">
-                  <div class="row align-items-center">
+            <div class="col-lg-3 pst">
+               <div class="mainHeaderTopRight text-right pst">
+                  <div class="row align-items-center pst">
                      <div class="col-lg-4">
                         <div class="awardIcon">
                            <li>
@@ -267,21 +267,70 @@
                            </li>
                         </div>
                      </div>
-                     <div class="col-lg-8">
-                        <div class="beforeLogin">
+                     <div class="col-lg-8 pst">
+                        <!-- <div class="beforeLogin">
                            <a id="singinBtn" href="#">Sign In</a>
-                        </div>
-                        <!-- div class="afterLogin">
-                           <ul>
+                        </div> -->
+                        <div class="afterLogin pst">
+                           <ul class="pst">
                               <li data-placement="bottom" id="toltip1" data-toggle="tooltip">
                                  <a href="#"><img src="asset/img/icons/bag.png" alt="" /></a>
                                  <div class="infoTooltip">
                                     <h5>My Wallet</h5>
                                  </div>
                               </li>
-                              <li><a href="#"><img src="asset/img/icons/user2.png" alt="" /></a></li>
+                              <li class="pst">
+                                 <a href="#"><img src="asset/img/icons/user2.png" alt="" /></a>
+                                 <!-- profile mega menu item -->
+                                 <div class="profileMegaMenu">
+                                    <div class="container">
+                                       <div class="row ">
+                                          <div class="col-12">
+                                             <div class="profileMegaMenuContainer justify-content-around">
+                                                <div class="profileMegaMenuItem">
+                                                   <a href="#">
+                                                      <img src="asset/img/icons/meg-menu/1.png" alt="">
+                                                      <p>My Dashboard</p>
+                                                   </a>
+                                                </div>
+                                                <div class="profileMegaMenuItem">
+                                                   <a href="#">
+                                                      <img src="asset/img/icons/meg-menu/2.png" alt="">
+                                                      <p>My Profile</p>
+                                                   </a>
+                                                </div>
+                                                <div class="profileMegaMenuItem">
+                                                   <a href="#">
+                                                      <img src="asset/img/icons/meg-menu/3.png" alt="">
+                                                      <p>My Portfolio</p>
+                                                   </a>
+                                                </div>
+                                                 <div class="profileMegaMenuItem">
+                                                   <a href="#">
+                                                      <img src="asset/img/icons/meg-menu/4.png" alt="">
+                                                      <p>My Classes</p>
+                                                   </a>
+                                                </div>
+                                                <div class="profileMegaMenuItem">
+                                                   <a href="#">
+                                                      <img src="asset/img/icons/meg-menu/5.png" alt="">
+                                                      <p>Account Settings</p>
+                                                   </a>
+                                                </div>
+                                                <div class="profileMegaMenuItem">
+                                                   <a href="#">
+                                                      <img src="asset/img/icons/meg-menu/5.png" alt="">
+                                                      <p>Sign Out</p>
+                                                   </a>
+                                                </div>
+                                             </div>
+                                          </div>
+                                       </div>
+                                    </div>
+                                 </div>
+                              </li>
                            </ul>
-                        </div> -->
+                        </div>
                      </div>
                   </div>
                </div>
